--- a/慕课网实践/企业网站/index.html
+++ b/慕课网实践/企业网站/index.html
@@ -60,7 +60,7 @@ myFocus.set({id:'picID'});//焦点图初始值id与最外层div id一致
   </div>
     <div class="pic">
       <ul>
-        <li><img src="images/ad2.jpg" /></li>
+        <li><img src="images/ad.jpg" /></li>
         <li><img src="images/ad3.jpg" /></li>
         <li><img src="images/ad4.jpg" /></li>
       </ul>
@@ -83,10 +83,83 @@ myFocus.set({id:'picID'});//焦点图初始值id与最外层div id一致
   </ul>
   </div><!--nes_list结束-->
   </div><!--news结束-->
-  <div class="course"></div><!--course结束-->
-  <div class="sidebar"></div><!--sidebar结束-->
+  <div class="course">
+  	<div class="title">
+  		<h2 class="title_left">课程中心</h2><span class="title_right"><a href="news.html" >More&gt;&gt;</a></span>
+  	</div><!--title结束-->
+  	<div class="course_pic">
+  		<img src="images/css.jpg"  />
+  		<h2><a href="#">CSS圆角进化论</a></h2><p>实现了你想要的<br />你想要的都有</p>
+  	</div><!--course_pic结束-->
+  	<div class="course_type">
+  		<ul>
+  			<li>前端开发</li>
+  			<li>Java开发</li>
+  			<li>安卓开发</li>
+  			<li>IOS开发</li>
+  		</ul>
+  	</div><!--course_type结束-->
+  </div><!--course结束-->
+  <div class="sidebar">
+  	<div class="video">
+  		<div class="title"><h2 class="title_left">媒体聚焦</h2></div>
+  		<div class="video_content">
+  			<embed src="http://player.youku.com/player.php/sid/XMTYyMTc3MzI2NA==/v.swf" allowFullScreen="true" quality="high" width="220" height="140" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+  		</div>
+  	</div><!--video结束-->
+  	<div class="sidebar_ad">
+  		<img src="images/app.jpg"  />
+  	</div><!--sidebar_ad结束-->
+  	
+  </div><!--sidebar结束-->
   </div>
 </div>
 <!--wrap结束-->
+<div class="copyright">
+	<div class="copyright_content">
+		<ul>
+			<li><a href="#">课程</a>
+				<ul>
+					<li><a href="">1111</a></li>
+					<li><a href="">2222</a></li>
+					<li><a href="">3333</a></li>
+					<li><a href="">4444</a></li>
+				</ul>
+			</li>
+			
+			<li><a href="#">关于</a>
+				<ul>
+					<li><a href="">1111</a></li>
+					<li><a href="">2222</a></li>
+					<li><a href="">3333</a></li>
+					<li><a href="">4444</a></li>
+				</ul>
+			</li>
+			<li><a href="#">留言</a>
+				<ul>
+					<li><a href="">1111</a></li>
+					<li><a href="">2222</a></li>
+					<li><a href="">3333</a></li>
+					<li><a href="">4444</a></li>
+				</ul>
+			</li>
+			<li><a href="#">关注</a>
+				<ul>
+					<li><a href="">1111</a></li>
+					<li><a href="">2222</a></li>
+					<li><a href="">3333</a></li>
+					<li><a href="">4444</a></li>
+				</ul>
+			</li>
+			<li><a href="#"><img src="images/weixin.png">微信关注</a>
+				<ul><li><img src="images/qrcode.jpg" /> </li></ul>
+			</li>
+		</ul>
+	</div>
+		
+	</div>
+</div>
+	
+</div>
 </body>
 </html>
