--- a/客户关系/index.html
+++ b/客户关系/index.html
@@ -7,11 +7,12 @@
 	</head>
 	<body>
 		<div class="top">
-			<div class="top_up"></div>
+			<div class="top_up"><span>周扒皮客户关系管理系统</span></div>
 			<div class="top_content">
 				<div class="top_left">
 						<a href="#"><img src="img/home.png"</a>
 				</div>
+				<div class="top_middle"><img src="img/logo.jpg"/></div>
 				<div class="top_right">
 					<ul>
 						<li><a href="#">登录</a></li>
@@ -56,7 +57,17 @@
 					</li>
 				</ul>
 			</div><!--nav结束-->			
-			<div class="nav_right">子目录</div><!--nav_right结束-->
+			<div class="nav_right">
+				<div class="nav_right_content">
+					<ul>
+						<li><a href="#">创建服务</a></li>
+						<li><a href="#">分配服务</a></li>
+						<li><a href="#">处理服务</a></li>
+						<li><a href="#">反馈服务</a></li>
+						<li><a href="#">归档服务</a></li>
+					</ul>
+				</div>
+			</div><!--nav_right结束-->
 			<div class="main">内容</div><!--main结束-->
 		</div><!--wrap结束-->
 		<div class="copyright">
