--- a/客户关系/index.html
+++ b/客户关系/index.html
@@ -7,18 +7,16 @@
 	</head>
 	<body>
 		<div class="top">
-			<div class="top_up"><span>周扒皮客户关系管理系统</span></div>
+			<div class="top_up"></div>
 			<div class="top_content">
-				<div class="top_left">
-						<a href="#"><img src="img/home.png"</a>
-				</div>
-				<div class="top_middle"><img src="img/logo.jpg"/></div>
+				<div class="top_left"><img src="img/logo.jpg"/></div>
 				<div class="top_right">
 					<ul>
-						<li><a href="#">登录</a></li>
+						<li id="login"><a href="#">登录</a></li>
 						<li><form method="" >
 						<input class="search_text" type="text" class="search_text"/>
 						<input class="search_btn" type="submit" name="" id="" value="查询" /></form></li>
+						<li><a href="#"><img src="img/home.png"</a></li>
 						
 					</ul>
 				</div>
