--- a/客户关系/index.html
+++ b/客户关系/index.html
@@ -4,24 +4,24 @@
 		<meta charset="utf-8" />
 		<title>customer relationship management</title>
 		<link rel="stylesheet" href="css/main.css" /> 
+		<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
 	</head>
 	<body>
 		<div class="top">
-			<div class="top_up"></div>
 			<div class="top_content">
 				<div class="top_left"><img src="img/logo.jpg"/></div>
 				<div class="top_right">
 					<ul>
 						<li id="login"><a href="#">登录</a></li>
-						<li><form method="" >
-						<input class="search_text" type="text" class="search_text"/>
-						<input class="search_btn" type="submit" name="" id="" value="查询" /></form></li>
 						<li><a href="#"><img src="img/home.png"</a></li>
+						<li><form method="" action="" >
+						<input class="search_text" type="text" class="search_text"/>
+						<input type="submit" class="search_btn" value=""/> </form></li>
+						
 						
 					</ul>
 				</div>
 			</div><!--top_content结束-->
-			<div class="top_bottom"></div>
 		</div><!--top结束-->
 		<div class="wrap">
 			<div class="nav">
@@ -54,7 +54,8 @@
 						</ul>
 					</li>
 				</ul>
-			</div><!--nav结束-->			
+			</div><!--nav结束-->	
+
 			<div class="nav_right">
 				<div class="nav_right_content">
 					<ul>
@@ -87,5 +88,6 @@
 				</ul>
 			</div>
 		</div><!--copyright结束-->
+		<script src="js/myNavigation.js" type="text/javascript"></script> 
 	</body>
 </html>
