--- a/客户关系/customerlost.html
+++ b/客户关系/customerlost.html
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>客户信息</title>
+		<title>客户流失信息管理</title>
 		<link rel="stylesheet" href="css/main.css" /> 
 	</head>
 	<body>
@@ -30,7 +30,7 @@
 					<li id="nav1"><a href="#" >客户</a>
 						<ul>
 							<li><a href="#">客户信息</a></li>
-							<li><a href="customerlost.html">客户流失</a></li>
+							<li><a href="#">客户流失</a></li>
 						</ul>
 					</li>
 					<li id="nav2"><a href="#">业务机会</a>
@@ -39,7 +39,7 @@
 							<li><a href="#">开发计划</a></li>
 						</ul>
 					</li>
-					<li id="nav3"><a href="service.html">服务</a></li>
+					<li id="nav3"><a href="#">服务</a></li>
 					<li id="nav4"><a href="#">统计报表</a>
 						<ul>
 							<li><a href="#">客户贡献</a></li>
@@ -58,7 +58,7 @@
 			</div><!--nav结束-->			
 			<div class="nav_right">
 				<div class="nav_right_content">
-					<span><p>客户信息</p></span>
+					<span><p>客户流失信息管理</p></span>
 				</div>
 			</div><!--nav_right结束-->
 			<div class="main">
@@ -66,10 +66,14 @@
 					<form id="search">
 						<fieldset>
 							<legend>客户信息查询</legend>
-							<span>客户编号：</span><br />
+							<span>客户经理：</span><br />
 							<input type="text" value="" /><br />
 							<span>客户名称：</span><br />
-							<input type="text" value="" /><br /><br />
+							<input type="text" value="" /><br />
+							<span>状态：</span>
+							<select>
+								<option >流失</option>
+							</select><br /><br />
 							<input type="submit" value="查询"/><br />
 						</fieldset>
 					</form>
