--- a/客户关系/customerlost.html
+++ b/客户关系/customerlost.html
@@ -18,8 +18,6 @@
 							<input class="search_text" type="text" class="search_text"/>
 							<input class="search_btn" type="submit" name="" id="" value="" /></form>
 						</li>
-						
-						
 					</ul>
 				</div>
 			</div><!--top_content结束-->
@@ -64,19 +62,26 @@
 			<div class="main">
 				<div class="search_box">
 					<form id="search">
-						<fieldset>
-							<legend>客户信息查询</legend>
-							<span>客户经理：</span><br />
-							<input type="text" value="" /><br />
-							<span>客户名称：</span><br />
-							<input type="text" value="" /><br />
-							<span>状态：</span>
-							<select>
-								<option >流失</option>
-							</select><br /><br />
-							<input type="submit" value="查询"/><br />
-						</fieldset>
+						<span>客户经理：</span>
+						<input type="text" value="" />
+						<span>客户名称：</span>
+						<input type="text" value="" />
+						<span>状态：</span>
+						<select>
+							<option >流失</option>
+						</select>
+						<input type="submit" value="查询"/>
 					</form>
+				</div>
+				<div class="search_info">
+					<table>
+						<tr>
+							<th ></th><th>编号</th><th>客户</th><th>经理</th><th>上次下单时间</th><th>确认流失时间</th><th>状态</th><th>操作</th>
+						</tr>
+						<tr>
+							<td></td><td>1</td><td>10086</td><td>联通</td><td>2016/5/8</td><td></td><td>暂缓流失</td><td><a>编辑</a></td>
+						</tr>
+					</table>
 				</div>
 			</div><!--main结束-->
 		</div><!--wrap结束-->
