--- a/客户关系/serviceadd.html
+++ b/客户关系/serviceadd.html
@@ -27,19 +27,19 @@
 		<div class="wrap">
 			<div class="nav">
 				<ul >
-					<li id="nav1"><a href="#" >客户</a>
+					<li id="nav1"><a href="index.html" >客户</a>
 						<ul>
-							<li><a href="#">客户信息</a></li>
-							<li><a href="#">客户流失</a></li>
+							<li><a href="index.html">客户信息</a></li>
+							<li><a href="customerlost.html">客户流失</a></li>
 						</ul>
 					</li>
-					<li id="nav2"><a href="#">业务机会</a>
+					<li id="nav2"><a href="salechance.html">业务机会</a>
 						<ul>
-							<li><a href="#">销售机会</a></li>
+							<li><a href="salechance.html">销售机会</a></li>
 							<li><a href="#">开发计划</a></li>
 						</ul>
 					</li>
-					<li id="nav3"><a href="#">服务</a></li>
+					<li id="nav3"><a href="service.html">服务</a></li>
 					<li id="nav4"><a href="#">统计报表</a>
 						<ul>
 							<li><a href="#">客户贡献</a></li>
@@ -59,20 +59,20 @@
 			<div class="nav_right">
 				<div class="nav_right_content">
 					<span><p>创建服务</p></span>
-					<button class="btn" src="">新建</button>
+					<button class="btn" src="#">新建</button>
 				</div>
 			</div><!--nav_right结束-->
 			<div class="main">
 				<div class="main_content">
 					<form>
-						<span>编&nbsp;&nbsp;号：<input type="text" class="text" /></span>
-						<span>服务类型： <select><option>选择</option></select> </span><br />
-						<span>概&nbsp;&nbsp;要：<input type="text" class="text" style="width: 300px;"></span><br />
-						<span>客&nbsp;&nbsp;户：<input type="text" class="text" /></span>
-						<span>状&nbsp;&nbsp;态： <select><option>选择</option></select> </span><br />
-						<span>服务请求：<textarea rows="10" cols="40"></textarea></span><br />
-						<span>创建人：<input type="text" class="text" /></span>
-						<span>创建时间：<input type="text" class="text" /></span><br />
+						<span>编&nbsp;&nbsp;号：</span><input type="text"  />
+						<span>服务类型： </span><select><option>选择</option></select> <br />
+						<span>概&nbsp;&nbsp;要：</span><input type="text"  style="width: 300px;"><br />
+						<span>客&nbsp;&nbsp;户：</span><input type="text"  />
+						<span>状&nbsp;&nbsp;态： </span><select><option>选择</option></select> <br />
+						<span>服务请求：</span><textarea rows="10" cols="40"></textarea><br />
+						<span>创建人：</span><input type="text"  />
+						<span>创建时间：</span><input type="text"  /><br />
 						<input class="btn" type="submit" value="保存">
 						<button type="" src="" value="" class="btn">返回</button>
 					</form>
