--- a/客户关系/salechance.html
+++ b/客户关系/salechance.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>customer relationship management</title>
+		<title>销售计划</title>
 		<link rel="stylesheet" href="css/main.css" /> 
 	</head>
 	<body>
@@ -27,19 +27,19 @@
 		<div class="wrap">
 			<div class="nav">
 				<ul >
-					<li id="nav1"><a href="customer.html" >客户</a>
+					<li id="nav1"><a href="index.html" >客户</a>
 						<ul>
-							<li><a href="#">客户信息</a></li>
-							<li><a href="#">客户流失</a></li>
+							<li><a href="index.html">客户信息</a></li>
+							<li><a href="customerlost.thml">客户流失</a></li>
 						</ul>
 					</li>
 					<li id="nav2"><a href="#">业务机会</a>
 						<ul>
-							<li><a href="salechance.html">销售机会</a></li>
+							<li><a href="#">销售机会</a></li>
 							<li><a href="#">开发计划</a></li>
 						</ul>
 					</li>
-					<li id="nav3"><a href="#">服务</a></li>
+					<li id="nav3"><a href="service.html">服务</a></li>
 					<li id="nav4"><a href="#">统计报表</a>
 						<ul>
 							<li><a href="#">客户贡献</a></li>
@@ -65,16 +65,13 @@
 			<div class="main">
 				<div class="search_box">
 					<form id="search">
-						<fieldset>
-							<legend>销售计划查询</legend>
-							<span>客户名称：</span><br />
-							<input type="text" value="" /><br />
-							<span>概要：</span><br />
-							<input type="text" value="" /><br />
-							<span>联系人：</span><br />
-							<input type="text" value="" /><br /><br />
-							<input type="submit" value="查询"/>
-						</fieldset>
+						<span>客户名称：</span>
+						<input type="text" value="" />
+						<span>概要：</span>
+						<input type="text" value="" />
+						<span>联系人：</span>
+						<input type="text" value="" />
+						<input type="submit" value="查询"/>
 					</form>
 				</div>
 			</div><!--main结束-->
