--- a/客户关系/salechanceadd.html
+++ b/客户关系/salechanceadd.html
@@ -27,20 +27,20 @@
 		<div class="wrap">
 			<div class="nav">
 				<ul >
-					<li id="nav1"><a href="#" >客户</a>
+					<li id="nav1"><a href="index.html" >客户</a>
 						<ul>
-							<li><a href="#">客户信息</a></li>
-							<li><a href="#">客户流失</a></li>
+							<li><a href="index.html">客户信息</a></li>
+							<li><a href="customerlost.html">客户流失</a></li>
 						</ul>
 					</li>
-					<li id="nav2"><a href="#">业务机会</a>
+					<li id="nav2"><a href="salechance.html">业务机会</a>
 						<ul>
-							<li><a href="#">销售机会</a></li>
+							<li><a href="salechance.html">销售机会</a></li>
 							<li><a href="#">开发计划</a></li>
 						</ul>
 					</li>
-					<li id="nav3"><a href="#">服务</a></li>
-					<li id="nav4"><a href="#">统计报表</a>
+					<li id="nav3"><a href="service.html">服务</a></li>
+					<li id="nav4"><a href="service.html">统计报表</a>
 						<ul>
 							<li><a href="#">客户贡献</a></li>
 							<li><a href="#">客户构成</a></li>
@@ -59,20 +59,20 @@
 			<div class="nav_right">
 				<div class="nav_right_content">
 					<span><p>创建销售计划</p></span>
-					<button class="btn" src="">新建</button>
+					<button class="btn" src="#">新建</button>
 				</div>
 			</div><!--nav_right结束-->
 			<div class="main">
 				<div class="main_content">
 					<form>
-						<span>编号：&nbps;&nbps;<input type="text" class="text" /></span>
+						<span>编&nbsp;&nbsp;号：<input type="text" class="text" /></span>
 						<span>机会来源：<input type="text" class="text" /></span><br />
 						<span>客户名称：<input type="text" class="text" /></span>
 						<span>成功几率：<input type="text" class="text" /></span><br />
-						<span>概要：<input type="text" class="text" / type="width:250px"></span><br />
+						<span>概&nbsp;&nbsp;要：<input type="text" class="text" style="width:300px"></span><br />
 						<span>联系人：<input type="text" class="text" /></span>
 						<span>联系人电话：<input type="text" class="text" /></span><br />
-						<span>描述：<textarea rows="10" cols="40"></textarea></span><br />
+						<span>描&nbsp;&nbsp;述：<textarea rows="8" cols="40"></textarea></span><br />
 						<span>创建人：<input type="text" class="text" /></span>
 						<span>创建时间：<input type="text" class="text" /></span><br />
 						<span>指派人：<input type="text" class="text" /></span>
