--- a/JavaScript DOM 编程艺术/乐队网站/template.html
+++ b/JavaScript DOM 编程艺术/乐队网站/template.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>home</title>
-		<link type="text/css" rel="stylesheet" href="css/basic.css"  />
+		<script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
+		<link type="text/css" rel="stylesheet" href="css/basic.css" media="screen" />
 	</head>
 	<body>
 		<header>
-			<img src="" alt="logo" />
+			<img src="img/logo.gif" alt="logo" />
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
