--- a/JavaScript DOM 编程艺术/乐队网站/index.html
+++ b/JavaScript DOM 编程艺术/乐队网站/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<title></title>
+		<meta charset="UTF-8">
+		<title>home</title>
+		<script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
+		<link type="text/css" rel="stylesheet" href="css/basic.css" media="screen" />
 	</head>
 	<body>
-		
+		<header>
+			<img src="img/logo.gif" alt="logo" />
+			<nav>
+				<ul>
+					<li><a href="index.html" >Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="photos.html">Photos</a></li>
+					<li><a href="live.html">Live</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
+		<article>
+			<h1>Learn More About Me</h1>
+			<h1>Welcome</h1>
+   			<p id="intro">Welcome to the official website of Jay Skript and the Domsters. 
+   				Here, you can <a href="about.html">learn more about the band</a>, 
+   				view <a href="photos.html">photos of the band</a>, 
+   				find out about <a href="live.html">tour dates</a> 
+   				and <a href="contact.html">get in touch with the band</a>.</p>
+		</article>
+		<script src="js/global.js" type="text/javascript"></script>
 	</body>
 </html>
