--- a/客户关系/showlinkman.html
+++ b/客户关系/showlinkman.html
@@ -1,10 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>客户信息</title>
+		<title>显示联系人</title>
 		<link rel="stylesheet" href="css/main.css" /> 
-		<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
 	</head>
 	<body>
 		<div class="top">
@@ -13,12 +12,11 @@
 				<div class="top_right">
 					<ul>
 						<li id="login"><a href="#">登录</a></li>
-						<li><a href="index.html"><img src="img/home.png"></a></li>
+						<li><a href="index.html"><img src="img/home.png"/></a></li>
 						<li>
 							<form method="" >
 							<input class="search_text" type="text" class="search_text"/>
-							<input class="search_btn" type="submit" name="" id="" value="" />
-							</form>
+							<input class="search_btn" type="submit" name="" id="" value="" /></form>
 						</li>
 						
 						
@@ -27,7 +25,7 @@
 			</div><!--top_content结束-->
 		</div><!--top结束-->
 		<div class="wrap">
-			<div class="nav" id="nav">
+			<div class="nav">
 				<ul >
 					<li id="nav1"><a href="index.html" >客户</a>
 						<ul>
@@ -35,7 +33,7 @@
 							<li><a href="customerlost.html">客户流失</a></li>
 						</ul>
 					</li>
-					<li id="nav2"><a href="#">业务机会</a>
+					<li id="nav2"><a href="salechance.html">业务机会</a>
 						<ul>
 							<li><a href="salechance.html">销售机会</a></li>
 							<li><a href="#">开发计划</a></li>
@@ -60,26 +58,40 @@
 			</div><!--nav结束-->			
 			<div class="nav_right">
 				<div class="nav_right_content">
-					<span><p>客户信息</p></span>
+					<span><p>显示联系人</p></span>
+					<a href="serviceadd.html"><button class="btn" >新建</button></a>
 				</div>
 			</div><!--nav_right结束-->
 			<div class="main">
-				<div class="search_box">
-					<form id="search">
-						<span>客户编号：</span>
-						<input type="text" value="" />
-						<span>客户名称：</span>
-						<input type="text" value="" />
-						<input type="submit" value="查询"/>
-					</form>
+				<div class="main_content">
+					<div class="main_content_table">
+						<table id="table">
+							<tr> 
+							<th>**编号**</th> 
+							<th>**孩子的名字**</th> 
+							<th>**性别**</th> 
+							<th>**职位**</th>
+							<th>**办公室电话**</th>
+							<th>**手机**</th>
+							<th>**注释**</th>
+							<th>**公司的ID**</th>
+							<th>**操作**</th>
+							</tr> 
+							<s:iterator value="list">
+								<tr>
+								<td><s:property value="linkmanID"/></td> 
+								<td><s:property value="linkmanName"/></td>
+								<td><s:property value="sex"/> </td>
+								<td><s:property value="position"/></td>
+								<td><s:property value="officePhone"/></td>
+								<td><s:property value="tele"/></td>
+								<td><s:property value="remark"/></td>
+								<td><s:property value="firmId"/></td>
+								<td><s:a href="deletelinkman!deleteLinkman.action?linkmanID=%{linkmanID}">删除</s:a></td></tr>
+							</s:iterator>
+						 </table>
+					 </div>
 				</div>
-				<div class="search_info">
-					<table>
-						<tr>
-							<th>选择</th><th>姓名</th><th>性别</th><th>职位</th><th>办公电话</th><th>手机</th><th>备注</th><th>操作</th>
-						</tr>
-					</table>
-				</div><!-- search_info结束-->
 			</div><!--main结束-->
 		</div><!--wrap结束-->
 		<div class="copyright">
@@ -101,6 +113,5 @@
 				</ul>
 			</div>
 		</div><!--copyright结束-->
-		<script type="text/javascript" src="js/global.js"></script>
 	</body>
 </html>
