--- a/JavaScript DOM 编程艺术/乐队网站/photos.html
+++ b/JavaScript DOM 编程艺术/乐队网站/photos.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>home</title>
+		<script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
+		<link type="text/css" rel="stylesheet" href="css/basic.css" media="screen" />
 	</head>
 	<body>
+		<header>
+			<img src="img/logo.gif" alt="logo" />
+			<nav>
+				<ul>
+					<li><a href="index.html" >Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="photos.html">Photos</a></li>
+					<li><a href="live.html">Live</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
+		<article>
+			<h1>Photos</h1>
+			<ul id="imagegallery">
+				<li>
+					<a href="img/photos/concert.jpg" title="the crowd goed wild">
+						<img src="img/photos/thumbnail_concert.jpg" alt="the band in concert" />
+					</a>
+				</li>
+				<li>
+					<a href="img/photos/bassist.jpg" title="an atomospheric moment">
+						<img src="img/photos/thumbnail_bassist.jpg" alt="the bassist"  />
+					</a>
+				</li>
+				<li>
+					<a href="img/photos/guitarist.jpg" title="rocking out">
+						<img src="img/photos/thumbnail_guitarist.jpg" alt="the guitarist"  />
+					</a>
+				</li>
+				<li>
+					<a href="img/photos/crowd.jpg" title="encore">
+						<img src="img/photos/thumbnail_crowd.jpg" alt="the audience"  />
+				</li>
+			</ul>
+		</article>
+		<script src="js/global.js" type="text/javascript"></script>
 	</body>
 </html>
