--- a/客户关系/connectmodify.html
+++ b/客户关系/connectmodify.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>客户流失信息管理</title>
+		<title>修改交往记录</title>
 		<link rel="stylesheet" href="css/main.css" /> 
 	</head>
 	<body>
@@ -18,6 +18,8 @@
 							<input class="search_text" type="text" class="search_text"/>
 							<input class="search_btn" type="submit" name="" id="" value="" /></form>
 						</li>
+						
+						
 					</ul>
 				</div>
 			</div><!--top_content结束-->
@@ -25,19 +27,19 @@
 		<div class="wrap">
 			<div class="nav">
 				<ul >
-					<li id="nav1"><a href="#" >客户</a>
+					<li id="nav1"><a href="index.html" >客户</a>
 						<ul>
-							<li><a href="#">客户信息</a></li>
-							<li><a href="#">客户流失</a></li>
+							<li><a href="index.html">客户信息</a></li>
+							<li><a href="customerlost.html">客户流失</a></li>
 						</ul>
 					</li>
-					<li id="nav2"><a href="#">业务机会</a>
+					<li id="nav2"><a href="salechance.html">业务机会</a>
 						<ul>
 							<li><a href="salechance.html">销售机会</a></li>
 							<li><a href="#">开发计划</a></li>
 						</ul>
 					</li>
-					<li id="nav3"><a href="#">服务</a></li>
+					<li id="nav3"><a href="service.html">服务</a></li>
 					<li id="nav4"><a href="#">统计报表</a>
 						<ul>
 							<li><a href="#">客户贡献</a></li>
@@ -65,33 +67,21 @@
 			</div><!--nav结束-->			
 			<div class="nav_right">
 				<div class="nav_right_content">
-					<span><p>客户流失信息管理</p></span>
+					<span><p>修改交往记录</p></span>
 				</div>
 			</div><!--nav_right结束-->
 			<div class="main">
-				<div class="search_box">
-					<form id="search">
-						<span>客户经理：</span>
-						<input type="text" value="" />
-						<span>客户名称：</span>
-						<input type="text" value="" />
-						<span>状态：</span>
-						<select>
-							<option >流失</option>
-						</select>
-						<input type="submit" value="查询"/>
+				<div class="main_content">
+					<form action="modifyconnect2!modifyConnect2.action" method="post">
+						<span>时间：</span><input type="text" name="connect_time" value="<s:property value="connect.connect_time"/>"/><p class="red">*</p><br />
+						<span>地点：</span><input type="text" name="place" value="<s:property value="connect.place"/>"> <p class="red">*</p><br />
+						<span>概要：</span><input type="text"  style="width: 300px;" name="connect_outline" value="<s:property value="connect.connect_outline"/>"><p class="red">*</p><br />
+						<span>备注：</span><input type="text" name="connect_remark" value="<s:property value="connect.connect_remark"/>"/><br />
+						<span>详细信息： </span><input type="text" name="detail" style="width: 300px;" value="<s:property value="connect.detail"/>"/> <br />
+						<input class="btn" type="submit" value="提交">
+						<button type="" src="" value="" class="btn">返回</button>
 					</form>
-				</div>
-				<div class="search_info">
-					<table>
-						<tr>
-							<th ></th><th>编号</th><th>客户</th><th>经理</th><th>上次下单时间</th><th>确认流失时间</th><th>状态</th><th>操作</th>
-						</tr>
-						<tr>
-							<td></td><td>1</td><td>10086</td><td>联通</td><td>2016/5/8</td><td></td><td>暂缓流失</td><td><a>编辑</a></td>
-						</tr>
-					</table>
-				</div>
+				</div >
 			</div><!--main结束-->
 		</div><!--wrap结束-->
 		<div class="copyright">
