--- a/客户关系/customerlostanalyse.html
+++ b/客户关系/customerlostanalyse.html
@@ -14,7 +14,7 @@
 				<div class="top_right">
 					<ul>
 						<li id="login"><a href="#">登录</a></li>
-						<li><a href="index.html"><img src="img/home.png"</a></li>
+						<li><a href="index.html"><img src="img/home.png"/></a></li>
 						<li>
 							<form method="" >
 							<input class="search_text" type="text" class="search_text"/>
@@ -49,6 +49,15 @@
 							<li><a href="#">客户构成</a></li>
 							<li><a href="#">客户服务</a></li>
 							<li><a href="#">客户流失</a></li>
+						</ul>
+					</li>
+					<li id="nav3"><a href="search.html">查询中心</a>
+						<ul>
+							<li>
+								<form action="product!showAll.action" method="post" id="myForm">
+								<a href="#" onclick="myForm()">查询产品信息</a></form> 
+							</li>
+							<li><a href="search_stock">查询库存</a></li>
 						</ul>
 					</li>
 					<li id="nav5"><a href="#">管理员功能</a>
