--- a/客户关系/search_goods.html
+++ b/客户关系/search_goods.html
@@ -1,11 +1,13 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<title>客户流失信息管理</title>
+		<meta charset="utf-8" /> 
+		<title>查询产品信息</title>
 		<link rel="stylesheet" href="css/main.css" /> 
+		<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
 	</head>
-	<body>
+	<body id="sale">
 		<div class="top">
 			<div class="top_content">
 				<div class="top_left"><img src="img/logo.jpg"/></div>
@@ -18,6 +20,8 @@
 							<input class="search_text" type="text" class="search_text"/>
 							<input class="search_btn" type="submit" name="" id="" value="" /></form>
 						</li>
+						
+						
 					</ul>
 				</div>
 			</div><!--top_content结束-->
@@ -25,10 +29,10 @@
 		<div class="wrap">
 			<div class="nav">
 				<ul >
-					<li id="nav1"><a href="#" >客户</a>
+					<li id="nav1"><a href="index.html" >客户</a>
 						<ul>
-							<li><a href="#">客户信息</a></li>
-							<li><a href="#">客户流失</a></li>
+							<li><a href="index.html">客户信息</a></li>
+							<li><a href="customerlost.thml">客户流失</a></li>
 						</ul>
 					</li>
 					<li id="nav2"><a href="#">业务机会</a>
@@ -37,7 +41,7 @@
 							<li><a href="#">开发计划</a></li>
 						</ul>
 					</li>
-					<li id="nav3"><a href="#">服务</a></li>
+					<li id="nav3"><a href="service.html">服务</a></li>
 					<li id="nav4"><a href="#">统计报表</a>
 						<ul>
 							<li><a href="#">客户贡献</a></li>
@@ -65,32 +69,48 @@
 			</div><!--nav结束-->			
 			<div class="nav_right">
 				<div class="nav_right_content">
-					<span><p>客户流失信息管理</p></span>
+					<span><p>查询产品信息</p></span>
 				</div>
 			</div><!--nav_right结束-->
 			<div class="main">
 				<div class="search_box">
-					<form id="search">
-						<span>客户经理：</span>
-						<input type="text" value="" />
-						<span>客户名称：</span>
-						<input type="text" value="" />
-						<span>状态：</span>
-						<select>
-							<option >流失</option>
-						</select>
-						<input type="submit" value="查询"/>
-					</form>
+					<div class="search_box_content">
+						<form id="search" action="product2!selectProduct.action" method="post" >
+							<span>名称：</span>
+							<input type="text" value="" name="product_name" />
+							<span>型号：</span>
+							<input type="text" value="" name="product_type"/>
+							<span>批次：</span>
+							<input type="text" value="" name="product_batch"/>
+							<input type="submit" value="查询"/>
+						</form>
+					</div>
 				</div>
-				<div class="search_info">
-					<table>
-						<tr>
-							<th ></th><th>编号</th><th>客户</th><th>经理</th><th>上次下单时间</th><th>确认流失时间</th><th>状态</th><th>操作</th>
-						</tr>
-						<tr>
-							<td></td><td>1</td><td>10086</td><td>联通</td><td>2016/5/8</td><td></td><td>暂缓流失</td><td><a>编辑</a></td>
-						</tr>
-					</table>
+				<div class="main_content">
+					<div class="main_content_table">
+						<table id="table">
+							<tr> 
+							<th>**编号**</th> 
+							<th>**名称**</th> 
+							<th>**型号**</th> 
+							<th>**等级/批次**</th>
+							<th>**单位**</th>
+							<th>**单价（元）**</th>
+							<th>**备注**</th>
+							</tr> 
+							<s:iterator value="list">
+								<tr>
+									<td><s:property value="product_id"/></td>
+									<td><s:property value="product_name"/></td>
+									<td><s:property value="product_type"/></td>
+									<td><s:property value="product_batch"/></td>
+									<td><s:property value="product_unit"/></td>
+									<td><s:property value="product_price"/></td>
+									<td><s:property value="remark"/></td>
+								</s:iterator>
+								</tr>
+						</table>
+					</div>
 				</div>
 			</div><!--main结束-->
 		</div><!--wrap结束-->
@@ -113,5 +133,12 @@
 				</ul>
 			</div>
 		</div><!--copyright结束-->
+		<script type="text/javascript">
+		window.onload=function myForm(){
+			var form=document.getElementById("myForm");
+			form.submit();
+		}
+		</script>
 	</body>
 </html>
+tml>
