--- a/客户关系/serviceadd.html
+++ b/客户关系/serviceadd.html
@@ -12,7 +12,7 @@
 				<div class="top_right">
 					<ul>
 						<li id="login"><a href="#">登录</a></li>
-						<li><a href="index.html"><img src="img/home.png"</a></li>
+						<li><a href="index.html"><img src="img/home.png"/></a></li>
 						<li>
 							<form method="" >
 							<input class="search_text" type="text" class="search_text"/>
@@ -48,6 +48,15 @@
 							<li><a href="#">客户流失</a></li>
 						</ul>
 					</li>
+					<li id="nav3"><a href="search.html">查询中心</a>
+						<ul>
+							<li>
+								<form action="product!showAll.action" method="post" id="myForm">
+								<a href="#" onclick="myForm()">查询产品信息</a></form> 
+							</li>
+							<li><a href="search_stock">查询库存</a></li>
+						</ul>
+					</li>
 					<li id="nav5"><a href="#">管理员功能</a>
 						<ul>
 							<li><a href="#">管理用户</a></li>
@@ -65,11 +74,11 @@
 			<div class="main">
 				<div class="main_content">
 					<form>
-						<span>编&nbsp;&nbsp;号：</span><input type="text"  />
+						<span>编号：</span><input type="text"  />
 						<span>服务类型： </span><select><option>选择</option></select> <br />
-						<span>概&nbsp;&nbsp;要：</span><input type="text"  style="width: 300px;"><br />
-						<span>客&nbsp;&nbsp;户：</span><input type="text"  />
-						<span>状&nbsp;&nbsp;态： </span><select><option>选择</option></select> <br />
+						<span>概要：</span><input type="text"  style="width: 300px;"><br />
+						<span>客户：</span><input type="text"  />
+						<span>状态： </span><select><option>选择</option></select> <br />
 						<span>服务请求：</span><textarea rows="10" cols="40"></textarea><br />
 						<span>创建人：</span><input type="text"  />
 						<span>创建时间：</span><input type="text"  /><br />
