--- a/客户关系/allotservice.html
+++ b/客户关系/allotservice.html
@@ -2,10 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>查询历史订单</title>
+		<title>指派服务</title>
 		<link rel="stylesheet" href="css/main.css" /> 
 		<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-		<script type="text/javascript" src="js/global.js"></script>
 	</head>
 	<body id="customer">
 		<div class="top">
@@ -70,33 +69,29 @@
 			</div><!--nav结束-->			
 			<div class="nav_right">
 				<div class="nav_right_content">
-					<span><p>查询历史订单</p></span>
-						<form method="post" action="showlinkman" style="display:inline;"><button type="submit" class="btn" style="width:73px">显示联系人</button></form>
+					<span><p>指派服务</p></span>
 				</div>
 			</div><!--nav_right结束-->
 			<div class="main">
 				<div class="main_content">
-				<!--private int orderID;
-	private String state;
-	private Date ordertime;
-	private String orderAddress;
-	private double totalMoney;
-	private int customerID;
-	private String customerName;
-	private double totalPrice;
-	private Set<ProductPurchase> ProductPurchases;  -->
-					<form action="addlinkman!addLinkman.action" method="post">
-						<span>公司名字：</span><input type="text" value="999" name="customerName" /><br />
-						<span>公司编号：</span><input type="text" value="不详" name="sex"> <br />
-						<span>状态：</span><input type="text" value="不详" name="position"><br />
-						<span>订单ID：</span><input type="text" value="999" name="officePhone" /><br />
-						<span>地址：</span><input type="text" value="999" name="tele"  /> <br />
-						<span>总金额：</span><input type="text" value="不详" name="remark" /> <br />
-						<span>交易日期：</span><input type="text" value="999" name="firmId"  /> <br />
-					</form>
-
- 
-				</div >
+					
+					<form action="allotService?service_id=<s:property value="service_id"/>" method="post">
+						<s:iterator value="services" status="st">
+						<span>服务类型：</span> <input type="text" readonly="readonly" value="<s:property value="service_type.type_name"/>" />
+						<span>概要：</span><input type="text"  readonly="readonly" value="<s:property value="service_outline"/>" /><br />
+						<span>客户编号：</span><input type="text"  readonly="readonly" value="<s:property value="customer.customer_name"/>" />
+						<span>服务请求：</span><input type="text"  readonly="readonly" value="<s:property value="service_request"/>" /><br />
+						<span>状态：</span>新创建<br />
+						<span>创建人：</span><input type="text"  readonly="readonly" value="<s:property value="builder.usr_name"/>" /><br />
+						<span>创建时间：</span><input type="text"  readonly="readonly" value="<s:property value="build_time"/>" />
+						<span>创建时间：</span><input type="text"  readonly="readonly" value="<s:property value="build_time"/>" /><br />
+						<span>指派人：</span><s:select list="allots"  listValue="usr_name" listKey="usr_name"  name="allot.usr_name"   
+												headerKey="02" headerValue="" ></s:select><br />
+					   <input type="submit" value="指派" class="btn"/>
+					   </s:iterator>
+				</form>  
+				
+				</div>
 			</div><!--main结束-->
 		</div><!--wrap结束-->
 		<div class="copyright">
@@ -120,6 +115,4 @@
 		</div><!--copyright结束-->
 		<script type="text/javascript" src="js/global.js"></script>
 	</body>
-
 </html>
- 
