--- a/FCC/local weather/index.html
+++ b/FCC/local weather/index.html
@@ -5,7 +5,7 @@
 		<script src="js/jquery-3.1.0.min.js"></script>
 		<link rel="stylesheet" href="css/weather.css" />
 		<script type="text/javascript" src="js/weather.js" ></script>
-		<script type="text/javascript" src="http://counter.sina.com.cn/ip/" charset="gb2312"></script>
+		<!--<script type="text/javascript" src="http://counter.sina.com.cn/ip/" charset="gb2312"></script>-->
 		<script src="http://www.bitstorm.org/jquery/color-animation/jquery.animate-colors-min.js"></script>
 		<title>local weather</title>
 	</head>
