--- a/慕课网实践/网页定位导航特效/index.html
+++ b/慕课网实践/网页定位导航特效/index.html
@@ -79,7 +79,7 @@
 			}
 		</style>
 		<script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
-		<!--
+
         	
 		<script type="text/javascript">
 			$(document).ready(function(){
@@ -116,9 +116,9 @@
 
 		</script>
 		
-        -->
+
         <!--js方法-->
-		<script type="text/javascript">
+		<!--<script type="text/javascript">
 		//根据classname获取元素
 		function getByClassName(obj,clas){
 			var elements=obj.getElementsByTagName("*");
@@ -177,7 +177,7 @@
 					}
 				}
 			}
-		</script>
+		</script>-->
 	</head>
 	<body>
 		<div id="menu">
